################################################################################
#
# Iterating over frames and individual frame samples.
#
################################################################################

add_executable(frame_iteration frame_iteration.cpp)
target_link_libraries(frame_iteration Aquila)
