################################################################################
#
# Playback examples using SFML library.
#
################################################################################

add_subdirectory(sfml_generator)
add_subdirectory(sfml_karplus_strong)
add_subdirectory(sfml_imperial_march)
