################################################################################
#
# Iterating over wave samples and frames.
#
################################################################################

add_executable(wave_iteration wave_iteration.cpp)
target_link_libraries(wave_iteration Aquila)
