################################################################################
#
# Displays all windows as a simple text-mode plot.
#
################################################################################

add_executable(window_plot window_plot.cpp)
target_link_libraries(window_plot Aquila)
