################################################################################
#
# Unit tests for signal source classes.
#
################################################################################

add_subdirectory(generator)
add_subdirectory(ArrayData)
add_subdirectory(Frame)
add_subdirectory(WaveFile)
